2003-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4 (STEPMAKE_CHECK_VERSION_UNSUPPORTED): New
	function.
	(STEPMAKE_GETTEXT): If g++ >= 3.3, use gcc for gettext checking.

2003-06-08  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: tune regexp for show-paren-function.

2003-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/ly2dvi.py (run_latex, run_dvips, 'main'): Make preview
	for all LilyPond-produced tex snippets.

	* tex/lilyponddefs.tex: Allow overriding of interscoreline.  This
	fixes one line --preview output of ly2dvi.

2003-06-07  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: match only one type of slurs in
	LilyPond-show-paren-function.

2003-06-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/GNUmakefile (EXTRA_DIST_FILES): 
	* debian/lilypond1.7.dirs: 
	* debian/lilypond1.7-doc.dirs: New file.

	* input/regression/chord-name-exceptions.ly: Add parameter for
	ignatzekExceptions.  Quote hash in docstring.

2003-06-06  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el (show-paren-function): define show-paren-function
	as LilyPond-blink-matching-open and use it for closing parens.
	Let LilyPond-blink-matching-open know whether a bracket was inserted.

	* lilypond-indent.el: renamed LilyPond-beginning-of-containing-sexp to
	LilyPond-scan-containing-sexp and LilyPond-blink-matching-open to
	LilyPond-blink-matching-paren in order to match both open and close
	brackets.
	
2003-06-05  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el (LilyPond-show-paren-function): introduce for
	testing by modifying the code from FSF Emacs paren.el. Add comments.

2003-06-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/dpncnt.ly: Transpose example to match new
	default \chords octave.  Add comment.
	
	* scm/chord-name.scm (sequential-music-to-chord-exceptions): Add
	comment about octave change.

2003-06-04  Graham Percival  <gperlist@shaw.ca>

	* input/test/[d,e]: added texinfo index tags.